--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,17 @@
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:src="@drawable/ic_launcher"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_launcher" />
 
     <View
         android:id="@+id/view1"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        tools:background="@drawable/ic_launcher"
         app:layout_constraintStart_toEndOf="@id/imageView1"
-        app:layout_constraintTop_toTopOf="@id/imageView1" />
+        app:layout_constraintTop_toTopOf="@id/imageView1"
+        tools:background="@drawable/ic_launcher" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -34,8 +34,8 @@
         android:id="@+id/imageView3"
         android:layout_width="200dp"
         android:layout_height="600dp"
-        android:scaleType="centerCrop"
         android:layout_marginLeft="10dp"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toEndOf="@id/imageView2"
         app:layout_constraintTop_toTopOf="@id/imageView1"
         tools:background="@color/black" />
@@ -49,6 +49,24 @@
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="fragment"
+        app:layout_constraintBottom_toTopOf="@+id/btnLoad"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnViewPager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="viewPager"
+        app:layout_constraintBottom_toTopOf="@+id/btnFragment"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
